<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".boton4.SeleccionImagen"
    android:background="#C665D0">

    <Button
        android:id="@+id/btnFerrari"
        android:text="@string/SeleccionImagenes_Ferrari"
        android:layout_width="144dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentCoche"
        style="@style/BotonRojo"/>

    <Button
        android:id="@+id/btnMazda"
        android:layout_width="144dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:text="@string/SeleccionImagenes_Mazda"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFerrari"
        style="@style/BotonAzul"/>

    <Button
        android:id="@+id/btnRUF"
        style="@style/BotonAmarillo"
        android:layout_width="144dp"
        android:layout_height="80dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="28dp"
        android:text="@string/SeleccionImagenes_Ruf"
        app:layout_constraintStart_toEndOf="@+id/btnMazda"
        app:layout_constraintTop_toBottomOf="@+id/btnMclaren" />

    <Button
        android:id="@+id/btnMclaren"
        android:layout_width="144dp"
        android:layout_height="80dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="32dp"
        android:text="@string/SeleccionImagenes_Mclaren"
        app:layout_constraintStart_toEndOf="@+id/btnFerrari"
        app:layout_constraintTop_toBottomOf="@+id/fragmentCoche"
        style="@style/BotonNaranja"/>

    <FrameLayout
        android:id="@+id/fragmentCoche"
        android:layout_width="303dp"
        android:layout_height="337dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.28"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>