<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnNumPrim"
        android:layout_width="148dp"
        android:layout_height="74dp"
        android:layout_marginTop="87dp"
        android:onClick="iniciarPrimos"
        android:text="@string/principal_iniciarPrimos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnJuegoS"
        app:layout_constraintHorizontal_bias="0.164"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnDespImg"
        android:layout_width="148dp"
        android:layout_height="74dp"
        android:onClick="iniciarDesplazoImagen"
        android:text="@string/principal_desplazoImagenes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnSeleccImg"
        app:layout_constraintHorizontal_bias="0.162"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnNumPrim"
        app:layout_constraintVertical_bias="0.101" />

    <Button
        android:id="@+id/btnSeleccImg"
        android:layout_width="148dp"
        android:layout_height="74dp"
        android:onClick="iniciarSeleccionImagen"
        android:text="@string/principal_seleccionImagenes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.924"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnJuegoS"
        app:layout_constraintVertical_bias="0.101" />

    <Button
        android:id="@+id/btnJuegoS"
        android:layout_width="148dp"
        android:layout_height="74dp"
        android:layout_marginTop="87dp"
        android:onClick="iniciarJuegos"
        android:text="@string/principal_iniciarJuegos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.924"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="352dp"
        android:layout_height="214dp"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/soss" />

</androidx.constraintlayout.widget.ConstraintLayout>