<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".boton2.JuegoAcierto"
    android:background="#C665D0">

    <TextView
        android:id="@+id/txtSelectedPais"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/juegoAcierto_PaisSeleccionado"
        android:textColor="#161316"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.037" />

    <TextView
        android:id="@+id/txtSelectedCapital"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/juegoAcierto_CapitalSeleccionada"
        android:textColor="#161316"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.439"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment1"
        app:layout_constraintVertical_bias="0.004" />

    <Button
        android:id="@+id/btnVerificar"
        style="@style/BotonBasico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/JuegoAciertos_btnVerificar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment2" />

    <fragment
        android:id="@+id/fragment1"
        android:name="es.studium.practicamovil2laverda.boton2.Paises"
        android:layout_width="308dp"
        android:layout_height="164dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.384"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSelectedPais"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="373dp" />

    <fragment
        android:id="@+id/fragment2"
        android:name="es.studium.practicamovil2laverda.boton2.Capitales"
        android:layout_width="311dp"
        android:layout_height="155dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.408"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSelectedCapital"
        app:layout_constraintVertical_bias="0.0" />

    <FrameLayout
        android:id="@+id/frameComprobar"
        android:layout_width="160dp"
        android:layout_height="86dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.455"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnVerificar"
        app:layout_constraintVertical_bias="0.0">

    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>